--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Testing NG2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <link rel="stylesheet" href="semantic/dist/semantic.css">
+    <link rel="stylesheet" href="semantic/dist/semantic.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- 1. Load libraries -->
@@ -13,13 +13,13 @@
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>   
 
-    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="node_modules/angular2/bundles/http.dev.js"></script>
-    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="node_modules/angular2/bundles/angular2-polyfills.min.js"></script>
+    <script src="node_modules/systemjs/dist/system.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.min.js"></script>
+    <script src="node_modules/angular2/bundles/http.min.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="semantic/dist/semantic.js"></script>
+    <script src="semantic/dist/semantic.min.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
